erlang-p1-mysql (1.0.4-0.1) unstable; urgency=medium

  * New upstream release.
  * Update watch file.

 -- Mathias Ertl <mati@jabber.at>  Sat, 30 Sep 2017 17:05:02 +0200

erlang-p1-mysql (1.0.3-0.1) unstable; urgency=medium

  * New upstream release.
  * Update Standards-Version to 4.0.0 (no changes needed).

 -- Mathias Ertl <mati@jabber.at>  Fri, 07 Jul 2017 13:56:21 +0200

erlang-p1-mysql (1.0.2-0.1) unstable; urgency=medium

  * New upstream release.
  * Update Standards-Version to 3.9.8.

 -- Mathias Ertl <mati@jabber.at>  Sun, 29 Jan 2017 12:11:06 +0100

erlang-p1-mysql (1.0.1-0.1) unstable; urgency=medium

  * New upstream release.
  * This package now uses the upstream
    https://github.com/processone/p1_mysql, in line with what ejabberd
    uses.
  * Conflicts with ejabberd << 1:16.02

 -- Mathias Ertl <mati@jabber.at>  Thu, 10 Mar 2016 10:41:39 +0100

erlang-p1-mysql (1.0.0-0.1) unstable; urgency=medium

  * New upstream release.
  * Use upstream releases instead of using the latest git snapshot.
  * Use upstream-tag format to make use of upstream tags.

 -- Mathias Ertl <mati@jabber.at>  Sat, 16 Jan 2016 11:03:40 +0100

erlang-p1-mysql (0.2015.09.29-0.1) unstable; urgency=medium
  
  * Imported upstream version 0.2015.09.29.
  * Use Debian revision 0.1 so official packages would override this package.
  * Add Philipp Huebner as X-Orig-Maintainer.
  * Ignore vim swap files in debian/.
  * Add erlang-syntax-tools as build dependency, so that the package also
    builds on Ubuntu Wily.

 -- Mathias Ertl <mati@jabber.at>  Sat, 03 Oct 2015 14:11:02 +0200

erlang-p1-mysql (0.2014.10.16-1) unstable; urgency=medium

  * Maintaining this package in https://apt.jabber.at.
  * Imported upstream version 0.2014.10.16
  * Add VCS-* fields in debian/control.
  * Fix licence-field in debian/copyright.

 -- Mathias Ertl <mati@jabber.at>  Sun, 21 Dec 2014 12:40:14 +0100

erlang-p1-mysql (0.2014.03.10-2) unstable; urgency=medium

  * Add correct Erlang dependencies
