@@ -2,6 +2,7 @@ erlang-p1-mysql (1.0.4-0.1) unstable; urgency=medium
 
   * New upstream release.
   * Update watch file.
+  * Merge changes to debian/rules from upstream.
 
  -- Mathias Ertl <mati@jabber.at>  Sat, 30 Sep 2017 17:05:02 +0200
 
